# PSYBOT-AI

./: Nuttoo Repository  Nuttoo-README.md  PULL_REQUEST_TEMPLATE.md  README.md  Repository
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  module_submission.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  security-scan.yml
apps-agent/: package.json
apps-agent/src/: main.ts  tsconfig.json
apps-api/: package.json
apps-api/src/: main.ts  server.ts  (+1 more)
apps-cli/: package.json
apps-indexer/: package.json
apps-web/: middleware.ts  next.config.js  package.json  tsconfig.json
apps-worker/: package.json
docs/: architecture.md  deployment.md  overview.md  quickstart.md  security.md  terminal-style-guide.md  troubleshooting.md
modules/: README.md
programs/nuttoo_registry/: Anchor.toml  Cargo.toml  package.json
programs/nuttoo_registry/fixtures/: module-manifest.json  sample-artifact.tgz
programs/nuttoo_registry/idl/: nuttoo_registry.json
programs/nuttoo_registry/migrations/: deploy.ts
programs/nuttoo_registry/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/nuttoo_registry/src/instructions/: attest_artifact.rs  create_fork.rs  init_registry.rs  mod.rs  publish_module.rs  record_run.rs  set_policy.rs  update_module.rs
programs/nuttoo_registry/src/state/: fork.rs  mod.rs  module.rs  registry.rs  run.rs
programs/nuttoo_registry/src/utils/: hash.rs  mod.rs  pda.rs  validate.rs
programs/nuttoo_registry/tests/: nuttoo_registry.spec.ts
scripts/: bootstrap.sh  doctor.sh
(+215 files in other folders)
